# fencer

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  docker.yml
src/: args.rs  config.rs  lib.rs  main.rs  search.rs  utilities.rs
